maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:8: error: not found: value random2
      al=random2()
         ^RandomMouseMaze:9: error: type mismatch;
 found   : Unit
 required: Boolean
      if (al=0){
            ^