maze.randommouse.RandomMouseMaze.scala.code
var al=0
override def run() {
  while (estSurBiscuit()==false){
    if (estFaceMur()==false){
      avance()
    } else {
      al=random2()
      if (al=0){
        gauche()
      } else {
        droite()
      }
    }    
  }
  prendBiscuit()
}